# Conways-Game-of-Life-C

./: .gitignore  .txt  CMakeCache.txt  CMakeLists.txt  Conways-Game-of-Life-C  Makefile  README.md  cmake_install.cmake  main  main.c
include/: UI.h  buttons.h  constants.h  schems.h
schematics/:  ciao.txt   glider.txt   gliderleft.txt  LWSS.txt  acorn.txt  boat.txt  brocken.txt  glider.txt  glider5.txt  gosper.txt  new_schematic.txt  test.txt  trio.txt  trio4.txt
src/: UI.c  main.c  schems.c
